--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mi-Pod Wholesale Shipping</title>
   </head>
-  <body>
+<body class="bg-zinc-700">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
